--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,11 +1,11 @@
 // COLORS
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+// $color-primary: #55c57a;
+// $color-primary-light: #7ed56f;
+// $color-primary-dark: #28b485;
 
-// $color-primary: #AC3464;
-// $color-primary-light: #7b4397;
-// $color-primary-dark: #dc2430;
+$color-primary: #AC3464;
+$color-primary-light: #7b4397;
+$color-primary-dark: #dc2430;
 
 $color-grey-dark: #777; 
 $color-white: #fff;
